--- a/papir.html
+++ b/papir.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="stilus.css">
 </head>
+
 <body>
-    <table width="670px">
+    <table>
         <tr>
-            <td></td>
+            <td><a
+                    href="http://tudasbazis.sulinet.hu/hu/termeszettudomanyok/termeszetismeret/ember-a-termeszetben-4-osztaly/az-elo-termeszet-alapismeretei/a-papirgyartas"><img
+                        src="Images/cim.png"></a></td>
         </tr>
+        <table id="t2">
+            <tr>
+                <td class="ttd"></td>
+                <td class="ttd"></td>
+                <td class="ttd"></td>
+                <td class="ttd"></td>
+            </tr>
+            <tr>
+                <td class="ttd"></td>
+                <td class="ttd"></td>
+                <td class="ttd"></td>
+                <td class="ttd"></td>
+            </tr>
+        </table>
     </table>
 </body>
+
 </html>
