--- a/papir.html
+++ b/papir.html
@@ -18,16 +18,13 @@
         </tr>
         <table id="t2">
             <tr>
-                <td class="ttd"></td>
-                <td class="ttd"></td>
-                <td class="ttd"></td>
-                <td class="ttd"></td>
+                <td colspan="4" class="ttd" id="story">A papírgyártás története</td>
             </tr>
             <tr>
-                <td class="ttd"></td>
-                <td class="ttd"></td>
-                <td class="ttd"></td>
-                <td class="ttd"></td>
+                <td class="ttd" class="2nd row">A papír feltalálása</td>
+                <td class="ttd" class="2nd row">A papírmerítés</td>
+                <td class="ttd" class="2nd row">A papír feltalálása előtt</td>
+                <td class="ttd" class="2nd row">A papír diadalútja</td>
             </tr>
         </table>
     </table>
