--- a/papir.html
+++ b/papir.html
@@ -18,16 +18,62 @@
         </tr>
         <table id="t2">
             <tr>
-                <td colspan="4" class="ttd" id="story">A papírgyártás története</td>
+                <td colspan="4" class="ttd" id="story">
+                    <h1>A papírgyártás története</h1>
+                </td>
             </tr>
             <tr>
-                <td class="ttd" class="2nd row">A papír feltalálása</td>
-                <td class="ttd" class="2nd row">A papírmerítés</td>
-                <td class="ttd" class="2nd row">A papír feltalálása előtt</td>
-                <td class="ttd" class="2nd row">A papír diadalútja</td>
+                <td class="ttd" class="snd_row">
+                    <h2>A papír feltalálása</h2>
+                </td>
+                <td class="ttd" class="snd_row">
+                    <h2>A papírmerítés</h2>
+                </td>
+                <td class="ttd" class="snd_row">
+                    <h2>A papír feltalálása előtt</h2>
+                </td>
+                <td class="ttd" class="snd_row">
+                    <h2>A papír diadalútja</h2>
+                </td>
             </tr>
         </table>
     </table>
+    <h2>A papír feltalálása</h2>
+    <p>
+        hogy pontosan hol és mikor találták fel a papírt, a múlt ködébe vész, csak néhány nevet ismerünk a kezdeti
+        időkből. Caj-Lun volt az, aki a hagyomány szerint közbenjárt Ho-ti császárnál annak érdekében, hogy a Kínai
+        birodalomban államilag is serkentsék a papírgyártást. Ez időszámításunk szerint 105-ben történt.
+    </p>
+    <h2>A papírmerítés</h2>
+    <p>
+        Régen papírmerítéssel gyártották a papírt a következő módon: egy üstbe növényi anyagokat tettek, és összefőzték
+        némi
+        selyemmel vagy kötéldarabokkal egészen addig, míg híg rostos pépet nem kaptak. Ezután a rostoldatot egy szitára
+        öntötték, a vizet lecsöpögtették, és az így kapott rostokat leválasztották a szitáról.
+    </p>
+    <img src="Images/Cai-lun_kep.png">
+    <img src="Images/jel.png">
+    <h2>A papír feltalálása előtt</h2>
+    <p>
+        Mielőtt feltalálták a papírt, az emberek más anyagokra írták szövegeiket: kő- és agyagtáblára, viasztáblára,
+        papiruszra vagy pergamenre. Bár ezekre is lehetett írni, vagy az előállításuk volt hosszadalmasabb, vagy
+        kezelésük
+        volt nehézkesebb, tárolásuk pedig nagyobb helyet vagy gondosságot igényelt.
+        A pergamen állatok bőréből készített, tartós, hártyaszerű anyag. A papír megjelenése előtt erre írtak Európában.
+    </p>
+    <h2>A papír diadalútja</h2>
+    <p>
+        Európába a mórok közvetítésével jutott el a papír, az első európai papírmalmokat pedig 1100 tájékán alapították,
+        az
+        Ibériai-félszigeten. Olaszországot egy-másfél évszázad késéssel hódította meg a papír, Luccában Genovában és
+        Fabrianóban működtek jelentős papírkészítő műhelyek. Hazánkban csak jóval ezután tudott a papírkészítői szakma
+        meghonosodni: az első magyarországi papírmalmot az 1520-as években alapították, Lőcsén.
+    </p>
+    <p>
+        A papírmalom a papírkészítő műhely elnevezése. Valószínűleg a rongyzúzó berendezést hajtó vízikerék után kapta a
+        papírkészítő műhely ezt az elnevezést.
+    </p>
+    Folytatás: Gutenberg és a könyvnyomtatás
 </body>
 
 </html>
