--- a/papir.html
+++ b/papir.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Papír</title>
     <link rel="stylesheet" href="stilus.css">
 </head>
 
@@ -38,12 +38,14 @@
             </tr>
         </table>
     </table>
+    <img src="Images/jel.png">
     <h2>A papír feltalálása</h2>
     <p>
         hogy pontosan hol és mikor találták fel a papírt, a múlt ködébe vész, csak néhány nevet ismerünk a kezdeti
         időkből. Caj-Lun volt az, aki a hagyomány szerint közbenjárt Ho-ti császárnál annak érdekében, hogy a Kínai
         birodalomban államilag is serkentsék a papírgyártást. Ez időszámításunk szerint 105-ben történt.
     </p>
+    <img src="Images/jel.png">
     <h2>A papírmerítés</h2>
     <p>
         Régen papírmerítéssel gyártották a papírt a következő módon: egy üstbe növényi anyagokat tettek, és összefőzték
@@ -51,7 +53,7 @@
         selyemmel vagy kötéldarabokkal egészen addig, míg híg rostos pépet nem kaptak. Ezután a rostoldatot egy szitára
         öntötték, a vizet lecsöpögtették, és az így kapott rostokat leválasztották a szitáról.
     </p>
-    <img src="Images/Cai-lun_kep.png">
+    <img src="Images/Cai-lun_kep.png" id="cai-lun">
     <img src="Images/jel.png">
     <h2>A papír feltalálása előtt</h2>
     <p>
@@ -61,6 +63,7 @@
         volt nehézkesebb, tárolásuk pedig nagyobb helyet vagy gondosságot igényelt.
         A pergamen állatok bőréből készített, tartós, hártyaszerű anyag. A papír megjelenése előtt erre írtak Európában.
     </p>
+    <img src="Images/jel.png">
     <h2>A papír diadalútja</h2>
     <p>
         Európába a mórok közvetítésével jutott el a papír, az első európai papírmalmokat pedig 1100 tájékán alapították,
